# osparc-ops-environments

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  repo.config
certificates/: Makefile
charts/: Makefile
charts/portainer/: values.yaml.gotmpl
charts/signoz/: values.yaml.gotmpl
scripts/: common.Makefile  create-s3-bucket.bash  minio_prometheus_token.bash  portable.sh  remove_connections_delete_db.SQL
scripts/clean-registry/: clean-registry.bash  template.env
scripts/deployments/: aws-deploy.sh  deploy.sh  deploy_everything_locally.bash  local-deploy.sh
scripts/dynamic-hosts-aws/: README.md  dynamic-host-aws.py  requirements.txt
scripts/migration/: .env  copy_database.bash  db-backup.bash  db-restore.bash  migration.bash  readme.md  s3-data-migration.bash  s3-registry-migration.bash  template.env
services/mcp/: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml.j2  healthcheck.py  pyproject.toml  requirements.txt  server.py  template.env
services/mcp/mcp_aggregator/: __init__.py  __main__.py  backends.py  config.py  health.py  portainer_auth.py  server.py  skills.py
services/mcp/skills/docker-service-logs/: SKILL.md
services/mcp/skills/loki-log-query/: SKILL.md
services/mcp/skills/mcp-capabilities/: SKILL.md
services/mcp/skills/rabbitmq-celery-debugging/: SKILL.md
services/mcp/tests/: conftest.py  test_00_smoketests.py  test_backends.py  test_config.py  test_design_specs.py  test_gap_coverage.py  test_health.py  test_healthcheck.py  test_portainer_auth.py  test_server.py  test_skills.py
(+314 files in other folders)
