[project]
name = "mcp-aggregator"
version = "0.1.0"
description = "MCP Aggregator Server"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.10.5",
    "httpx>=0.27.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.2",
    "respx>=0.22",
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "design: tests derived from DESIGN.md specifications",
]
